[gd_scene load_steps=8 format=3 uid="uid://dyxd8qa6gte2q"]

[ext_resource type="LabelSettings" uid="uid://c1j4mcid0oc33" path="res://scenes/core/ui-title-font-config.tres" id="1_4ud11"]
[ext_resource type="Script" uid="uid://bfxddkxqevgjn" path="res://scenes/core/ui.gd" id="1_crg0x"]
[ext_resource type="LabelSettings" uid="uid://c1ogcrqx5q2gb" path="res://scenes/core/ui-hub-font.tres" id="2_lmuo1"]
[ext_resource type="LabelSettings" uid="uid://c7bmhsmlg4qay" path="res://scenes/core/ui-footer-font-config.tres" id="2_t7bob"]
[ext_resource type="Texture2D" uid="uid://da76dv0iqc1de" path="res://assets/icons/sand.png" id="4_1i852"]
[ext_resource type="Texture2D" uid="uid://cpv7tru83s4kd" path="res://assets/icons/grass.png" id="4_e5lfr"]
[ext_resource type="Texture2D" uid="uid://hlw05f5v242k" path="res://assets/icons/snow.png" id="5_fo7x4"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_crg0x")

[node name="hub" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginScoreLabel" type="MarginContainer" parent="hub"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 49.0
grow_horizontal = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 5

[node name="ScoreLabel" type="Label" parent="hub/MarginScoreLabel"]
layout_mode = 2
size_flags_horizontal = 0
text = "SCORE: "
label_settings = ExtResource("2_lmuo1")

[node name="MarginBallLeftLabel" type="MarginContainer" parent="hub"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50

[node name="BallLeftLabel" type="Label" parent="hub/MarginBallLeftLabel"]
layout_mode = 2
text = "Balls x0"
label_settings = ExtResource("2_lmuo1")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginPauseButton" type="MarginContainer" parent="hub"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="PauseButton" type="Button" parent="hub/MarginPauseButton"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = " l l "
alignment = 2

[node name="GameOverVBoxContainer" type="VBoxContainer" parent="hub"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="bg" type="Control" parent="hub/GameOverVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ColorRect" type="ColorRect" parent="hub/GameOverVBoxContainer/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -28.0
offset_right = 161.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5647059, 0.8784314, 0.9372549, 0.78431374)

[node name="Label" type="Label" parent="hub/GameOverVBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Level completed!"
label_settings = ExtResource("2_lmuo1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="hub/GameOverVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Main menu"

[node name="PauseMenuVBoxContainer" type="VBoxContainer" parent="hub"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="bg" type="Control" parent="hub/PauseMenuVBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="hub/PauseMenuVBoxContainer/bg"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 225.0
offset_right = -225.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5647059, 0.8784314, 0.9372549, 0.78431374)

[node name="Label" type="Label" parent="hub/PauseMenuVBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "Pause Menu"
label_settings = ExtResource("2_lmuo1")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ContinueButton" type="Button" parent="hub/PauseMenuVBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="ExitLevelButton" type="Button" parent="hub/PauseMenuVBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Quit Level"

[node name="LaunchButton" type="Button" parent="hub"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="LaunchButtonLabel" type="Label" parent="hub/LaunchButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Touch to
Launch!"
label_settings = ExtResource("2_lmuo1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg_ColorRect" type="ColorRect" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.46666667, 0.7137255, 1)

[node name="MarginContainer" type="MarginContainer" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="LevelMenu/MarginContainer"]
layout_mode = 2

[node name="TitleLevelMenu" type="Label" parent="LevelMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 48
text = "Select Level"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="LevelMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40

[node name="GoBackButton" type="Button" parent="LevelMenu/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 48
text = "Go Back"
alignment = 0

[node name="ButtonsGridContainer" type="GridContainer" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -343.0
offset_top = 289.0
offset_right = 343.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 50
columns = 3

[node name="Button" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 1"
icon = ExtResource("4_e5lfr")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button2" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 2"
icon = ExtResource("4_e5lfr")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button3" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 3"
icon = ExtResource("4_e5lfr")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button4" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 4"
icon = ExtResource("4_e5lfr")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button5" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 5"
icon = ExtResource("4_1i852")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button6" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 6"
icon = ExtResource("4_1i852")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button7" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 7"
icon = ExtResource("4_1i852")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button8" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 8"
icon = ExtResource("4_1i852")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button9" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 9"
icon = ExtResource("5_fo7x4")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button10" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 10"
icon = ExtResource("5_fo7x4")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button11" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 11"
icon = ExtResource("5_fo7x4")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button12" type="Button" parent="LevelMenu/ButtonsGridContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
theme_override_icons/icon = ExtResource("4_e5lfr")
text = "Level 12"
icon = ExtResource("5_fo7x4")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg_ColorRect" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.46666667, 0.7137255, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -217.5
offset_right = 217.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Brick Breaker!"
label_settings = ExtResource("1_4ud11")
horizontal_alignment = 1

[node name="MarginNewGame" type="MarginContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 120

[node name="NewGameButton" type="Button" parent="MainMenu/VBoxContainer/MarginNewGame"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0.5647059, 0.8784314, 0.9372549, 1)
theme_override_colors/font_outline_color = Color(0.011764706, 0.015686275, 0.36862746, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 48
text = "New Game"

[node name="MarginFooter" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -122.5
offset_top = -28.0
offset_right = 122.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 50

[node name="FooterLabel" type="Label" parent="MainMenu/MarginFooter"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
text = "Alkinos - September 2025"
label_settings = ExtResource("2_t7bob")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="hub/MarginPauseButton/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="hub/GameOverVBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="hub/PauseMenuVBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="hub/PauseMenuVBoxContainer/ExitLevelButton" to="." method="_on_exit_level_button_pressed"]
[connection signal="pressed" from="hub/LaunchButton" to="." method="_on_launch_button_pressed"]
[connection signal="pressed" from="LevelMenu/MarginContainer/VBoxContainer/MarginContainer/GoBackButton" to="." method="_on_go_back_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MarginNewGame/NewGameButton" to="." method="_on_new_game_button_pressed"]
